@@ -1,3 +1,7 @@
+2009-10-15  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/autoload.jl
+	* lisp/sawfish/wm/commands/grow-pack.jl: make Grow Pack Shrink Yank subgroup of Move Resize
+
 2009-10-13  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/tabs/tab.jl
 	* lisp/sawfish/wm/ext/edge-flip.jl
